На странице специализации внесены правки: замена обьекта Specialization на SpecializationDTO

--- a/SibCCSPETest.Admin/Page/SpecializationPage.razor
+++ b/SibCCSPETest.Admin/Page/SpecializationPage.razor
@@ -2,7 +2,7 @@
 @layout AdminLayout
 @rendermode InteractiveServer
 
-<NexusTableGrid @ref="NexusTable" TItem="Specialization" Data="specializations" SelectionMode="SelectMode"
+<NexusTableGrid @ref="NexusTable" TItem="SpecializationDTO" Data="Specializations" SelectionMode="SelectMode"
                 EditMode="EditMode">
     <ToolTemplate>
         <div class="mb-1">
