--- a/SibCCSPETest.Admin/Page/QuestionPage.razor
+++ b/SibCCSPETest.Admin/Page/QuestionPage.razor
@@ -2,7 +2,7 @@
 @layout AdminLayout
 @rendermode InteractiveServer
 
-<NexusTableGrid @ref="NexusTable" TItem="SpecializationDTO" Data="Items" SelectionMode="SelectMode"
+<NexusTableGrid @ref="NexusTable" TItem="QuestionDTO" Data="Items" SelectionMode="SelectMode"
                 EditMode="EditMode">
     <ToolTemplate>
         <div class="mb-1">
