Внесены правки. До деланы страницы групп, пользователи и темы

--- a/SibCCSPETest.Admin/Shared/NavMenu.razor
+++ b/SibCCSPETest.Admin/Shared/NavMenu.razor
@@ -15,21 +15,26 @@
                 </div>
                 <div class="nav-item">
                     <NavLink class="nav-link menu-sidebar-nav-link d-flex align-items-center gap-2" href="admin/specialization" Match="NavLinkMatch.All">
-                        <span aria-hidden="true"><i class="bi bi-clipboard-data-fill"></i></span> Специализация
+                        <span aria-hidden="true"><i class="bi bi-clipboard-fill"></i></span> Специализация
                     </NavLink>
                 </div>
                 <div class="nav-item">
-                    <NavLink class="nav-link menu-sidebar-nav-link d-flex align-items-center gap-2" href="" Match="NavLinkMatch.All">
+                    <NavLink class="nav-link menu-sidebar-nav-link d-flex align-items-center gap-2" href="admin/group" Match="NavLinkMatch.All">
                         <span aria-hidden="true"><i class="bi bi-people-fill"></i></span> Группа
                     </NavLink>
                 </div>
                 <div class="nav-item">
-                    <NavLink class="nav-link menu-sidebar-nav-link d-flex align-items-center gap-2" href="" Match="NavLinkMatch.All">
+                    <NavLink class="nav-link menu-sidebar-nav-link d-flex align-items-center gap-2" href="admin/user" Match="NavLinkMatch.All">
                         <span aria-hidden="true"><i class="bi bi-person-fill"></i></span> Пользователи
                     </NavLink>
                 </div>
                 <div class="nav-item">
-                    <NavLink class="nav-link menu-sidebar-nav-link d-flex align-items-center gap-2" href="" Match="NavLinkMatch.All">
+                    <NavLink class="nav-link menu-sidebar-nav-link d-flex align-items-center gap-2" href="admin/topic" Match="NavLinkMatch.All">
+                        <span aria-hidden="true"><i class="bi bi-clipboard-data-fill"></i></span> Темы
+                    </NavLink>
+                </div>
+                <div class="nav-item">
+                    <NavLink class="nav-link menu-sidebar-nav-link d-flex align-items-center gap-2" href="admin/question" Match="NavLinkMatch.All">
                         <span aria-hidden="true"><i class="bi bi-question-circle-fill"></i></span> Вопрос
                     </NavLink>
                 </div>
