--- a/SibCCSPETest.Admin/_Imports.razor
+++ b/SibCCSPETest.Admin/_Imports.razor
@@ -9,4 +9,5 @@
 @using SibCCSPETest.ServiceBase
 @using SibCCSPETest.Shared
 @using SibCCSPETest.Shared.Components
+@using BlazorPro.Spinkit
 @using MudBlazor
