--- a/SibCCSPETest.Admin/Page/QuestionPage.razor
+++ b/SibCCSPETest.Admin/Page/QuestionPage.razor
@@ -1,30 +1,44 @@
-﻿@page "/admin/specialization"
+﻿@page "/admin/question"
 @layout AdminLayout
 @rendermode InteractiveServer
 
-<NexusTableGrid @ref="NexusTable" TItem="QuestionDTO" Data="Items" SelectionMode="SelectMode"
-                EditMode="EditMode">
-    <ToolTemplate>
-        <div class="mb-1">
-            <NexusGroupButton>
-                <NexusButton Title="Добавить" OnClick="InserRow" CssClass="btn-primary" IconClass="bi bi-plus-lg" Disable="IsCrud" />
-                <NexusButton Title="Изменить" OnClick="EditRow" CssClass="btn-warning" IconClass="bi bi-pencil-fill" Disable="IsCrud" />
-                <NexusButton Title="Удалить" OnClick="Delete" CssClass="btn-danger" IconClass="bi bi-trash3-fill" Disable="IsCrud" />
-            </NexusGroupButton>
-            <NexusGroupButton>
-                <NexusButton Title="Сохранить" OnClick="Save" CssClass="btn-success" IconClass="bi bi-floppy-fill" Disable="IsSaveCancel" />
-                <NexusButton Title="Отменить" OnClick="Cancel" CssClass="btn-danger" IconClass="bi bi-x-lg" Disable="IsSaveCancel" />
-            </NexusGroupButton>
+@if (Items == null)
+{
+    <div class="" style=@($"height: 100%; width:100%; display: flex; align-items: center; justify-content: center;")>
+        <div style="">
+            <Wave Color="blue" Center="true" Size="2rem" style="opacity:1" />
+            <h5 class="mt-3" style="color:blue">
+                Загрузка данных
+            </h5>
         </div>
-    </ToolTemplate>
-    <Columns>
-        <NexusTableGridColumn Title="Id" Property="Id" />
-        <NexusTableGridColumn Title="Название" Property="Title" />
-    </Columns>
-    <EditColumns>
-        <NexusTableGridColumn Title="Id" Property="Id" />
-        <NexusTableGridColumn Title="Название">
-            <input class="border border-black" type="text" @bind="context.Title" />
-        </NexusTableGridColumn>
-    </EditColumns>
-</NexusTableGrid>
+    </div>
+}
+else
+{
+    <NexusTableGrid @ref="NexusTable" TItem="QuestionDTO" Data="Items" SelectionMode="SelectMode"
+                    EditMode="EditMode" EmptyMessage="Нет вопросов">
+        <ToolTemplate>
+            <div class="mb-1">
+                <NexusGroupButton>
+                    <NexusButton Title="Добавить" OnClick="InserRow" CssClass="btn-primary" IconClass="bi bi-plus-lg" Disable="IsCrud" />
+                    <NexusButton Title="Изменить" OnClick="EditRow" CssClass="btn-warning" IconClass="bi bi-pencil-fill" Disable="IsSelected" />
+                    <NexusButton Title="Удалить" OnClick="Delete" CssClass="btn-danger" IconClass="bi bi-trash3-fill" Disable="IsSelected" />
+                </NexusGroupButton>
+                <NexusGroupButton>
+                    <NexusButton Title="Сохранить" OnClick="Save" CssClass="btn-success" IconClass="bi bi-floppy-fill" Disable="IsSaveCancel" />
+                    <NexusButton Title="Отменить" OnClick="Cancel" CssClass="btn-danger" IconClass="bi bi-x-lg" Disable="IsSaveCancel" />
+                </NexusGroupButton>
+            </div>
+        </ToolTemplate>
+        <Columns>
+            <NexusTableGridColumn Title="Id" Property="Id" />
+            <NexusTableGridColumn Title="Название" Property="Title" />
+        </Columns>
+        <EditColumns>
+            <NexusTableGridColumn Title="Id" Property="Id" />
+            <NexusTableGridColumn Title="Название">
+                <input class="border border-black" type="text" @bind="context.Title" />
+            </NexusTableGridColumn>
+        </EditColumns>
+    </NexusTableGrid>
+}
