--- a/SibCCSPETest/App.razor
+++ b/SibCCSPETest/App.razor
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/css/variables.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="_content/BlazorPro.Spinkit/spinkit.min.css" rel="stylesheet" />
     <HeadOutlet />
 </head>
 
