--- a/SibCCSPETest.Admin/_Imports.razor
+++ b/SibCCSPETest.Admin/_Imports.razor
@@ -5,6 +5,7 @@
 @using SibCCSPETest.Admin
 @using SibCCSPETest.Admin.Shared
 @using SibCCSPETest.Admin.Page
+@using SibCCSPETest.Admin.Views
 @using SibCCSPETest.Data
 @using SibCCSPETest.ServiceBase
 @using SibCCSPETest.Shared
