--- a/SibCCSPETest.Shared/Components/NexusTableGrid/NexusTableGrid.razor
+++ b/SibCCSPETest.Shared/Components/NexusTableGrid/NexusTableGrid.razor
@@ -12,9 +12,10 @@
 
     @ToolTemplate
 
-    <table class="table table-bordered table-hover">
+    <table class="table table-bordered">
         <thead>
             <tr>
+                <th style="display:@(ExpandMode != NexusTableGridExpandMode.None ? "" : "none");width:10px;"></th>
                 @foreach (var item in _items)
                 {
                     <th scope="col">@item.Title</th>
@@ -24,28 +25,45 @@
         <tbody>
             @if (IsTableEmpty)
             {
-                <tr>
-                    <td colspan="8">
+                <tr class="empty-message">
+                    <td colspan="@CountOfItems">
                         <h3>@EmptyMessage</h3>
                     </td>
                 </tr>
             }
-            @foreach (var item in Data.Concat(InsertItem))
+            else
             {
-                <tr @onclick="() => SelectRow(item)" class="@(SelectedRows.Contains(item) ? "selected-row" : "")">
-                    @if (EditMode != NexusTableGridEditMode.None && EditedItem.Contains(item))
+                @foreach (var item in Data.Concat(InsertItem))
+                {
+                    <tr @onclick="() => SelectRow(item)" class="@(SelectedRows.Contains(item) ? "selected-row" : "")">
+                        <th @onclick="@(() => OnExpandRow(item))" @onclick:stopPropagation="true"
+                            style="display:@(ExpandMode != NexusTableGridExpandMode.None ? "" : "none");">
+                            <i class="bi @(ExpandedRows.Contains(item) ? "bi-chevron-down" : "bi-chevron-right")"></i>
+                        </th>
+                        @if (EditMode != NexusTableGridEditMode.None && EditedItem.Contains(item))
+                        {
+                            <CascadingValue Value="item">
+                                @EditColumns(item)
+                            </CascadingValue>
+                        }
+                        else
+                        {
+                            <CascadingValue Value="item">
+                                @Columns
+                            </CascadingValue>
+                        }
+                    </tr>
+                    @if (ExpandMode != NexusTableGridExpandMode.None)
                     {
-                        <CascadingValue Value="item">
-                            @EditColumns(item)
-                        </CascadingValue>
+                        <tr class="expand-row" style="display:@(ExpandedRows.Contains(item) ? "" : "none");">
+                            <td colspan="@CountOfItems">
+                                <CascadingValue Value="item">
+                                    @ExpandRow(item)
+                                </CascadingValue>
+                            </td>
+                        </tr>
                     }
-                    else
-                    {
-                        <CascadingValue Value="item">
-                            @Columns
-                        </CascadingValue>
-                    }
-                </tr>
+                }
             }
         </tbody>
     </table>
