--- a/SibCCSPETest/App.razor
+++ b/SibCCSPETest/App.razor
@@ -15,17 +15,18 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="/css/variables.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="_content/BlazorPro.Spinkit/spinkit.min.css" rel="stylesheet" />
+    <link href="_content/SibCCSPETest.Shared/css/nexus-information.css" rel="stylesheet" />
     <HeadOutlet />
 </head>
 
 <body>
     <Routes />
-    <MudThemeProvider />
-    <MudPopoverProvider />
+    <NexusNotificationHub @rendermode="RenderMode.InteractiveServer" Position="NexusNotificationPosition.BottomRight" Timeout="5"
+                          InfoIconClass="bi bi-info-circle-fill" SuccessIconClass="bi bi-check-circle-fill"
+                          ErrorIconClass="bi bi-exclamation-circle-fill" WarningIconClass="bi bi-exclamation-triangle-fill" />
+    <NexusDialog @rendermode="RenderMode.InteractiveServer" />
     <script src="_framework/blazor.web.js"></script>
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
             onerror="this.href='lib/bootstrap/dist/js/bootstrap.bundle.min.js'; this.onerror=null;"
             integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
