--- a/SibCCSPETest/_Imports.razor
+++ b/SibCCSPETest/_Imports.razor
@@ -7,5 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using SibCCSPETest.Shared
+@using SibCCSPETest.Shared.Components
 @using BlazorPro.Spinkit
-@using MudBlazor
